--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="header_wrapper">
         <a href="index.html"><img src="/images/logo_1.png" alt="ロゴ画像"></a>
-        <nav>
+        <nav id="g-nav">
           <ul>
             <li><a href="/index.html">HOME</a></li>
             <li><a href="/html/profile.html">PROFILE</a></li>
@@ -26,6 +26,7 @@
             <li><a href="#contact">CONTACT</a></li>
           </ul>
         </nav>
+        <div class="openbtn"><span></span><span></span><span></span></div>
       </div>
     </header>
     <main>
@@ -220,6 +221,6 @@
       <p>© 2022 yh.Design All Right Reserved</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="script/main.js"></script>
   </body>
 </html>
