--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
               <div class="link_btn"><a href="/html/profile.html">More Detail</a></div>
             </div>
           </div>
-          <div class="about_twitter"></div>
+          <div class="about_twitter">
+            <a class="twitter-timeline" data-lang="en" data-width="100%" data-height="400" data-theme="light" href="https://twitter.com/HID0802?ref_src=twsrc%5Etfw">Tweets by HID0802</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
         </div>
       </section>
       <section class="service">
@@ -91,73 +93,65 @@
             <li class="skill_item">
               <div class="skill_img"><i class="fa-brands fa-html5 fa-4x"></i></div>
               <div class="skill_text">
-                <p>
-                  HTML5<span>★★★★☆</span><br>
-                  基本的なLP・HP制作（下層ページなどを含む）
-                </p>
+                <h3>HTML5</h3>
+                <span>★★★★☆</span>
+                <p>基本的なLP・HP制作（下層ページなどを含む）</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img"><i class="fa-brands fa-css3-alt fa-4x"></i></div>
               <div class="skill_text">
-                <p>
-                  CSS3<span>★★★★☆</span><br>
-                  多彩なデザイン実装／スマホ・タブレット対応
-                </p>
+                <h3>CSS3</h3>
+                <span>★★★★☆</span>
+                <p>多彩なデザイン実装／スマホ・タブレット対応</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img sass"><i class="fa-brands fa-sass fa-3x"></i></div>
               <div class="skill_text">
-                <p>
-                  Sass（SCSS）<span>★★★☆☆</span><br>
-                  ファイル設計で保守・運用性のよいサイトづくり
-                </p>
+                <h3>Sass（SCSS）</h3>
+                <span>★★★☆☆</span>
+                <p>ファイル設計で保守・運用性のよいサイトづくり</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img"><i class="fa-brands fa-js fa-4x"></i></div>
               <div class="skill_text">
-                <p>
-                  JavaScript<span>★★☆☆☆</span><br>
-                  簡単なアニメーション実装
-                </p>
+                <h3>JavaScript</h3>
+                <span>★★☆☆☆</span>
+                <p>簡単なアニメーション実装</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img img"><img src="/images/skill_jq.png" alt="jqueryのロゴ画像"></div>
               <div class="skill_text">
-                <p>
-                  jQuery<span>★★★☆☆</span><br>
-                  slick／スムーススクロール／フェードインなど
-                </p>
+                <h3>jQuery</h3>
+                <span>★★★☆☆</span>
+                <p>slick／スムーススクロール／フェードインなど</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img"><i class="fa-brands fa-wordpress fa-4x"></i></div>
               <div class="skill_text">
-                <p>
-                  Wordpress<span>★★★☆☆</span><br>
-                  wordpress構築、wordpress化
-                </p>
+                <h3>Wordpress</h3>
+                <span>★★★☆☆</span>
+                <p>wordpress構築、wordpress化</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img img"><img src="/images/skill_xd.png" alt="XDのロゴ画像"></div>
               <div class="skill_text">
-                <p>
-                  XD<span>★★★☆☆</span><br>
-                  デザインカンプの作成
-                </p>
+                <h3>XD</h3>
+                <span>★★★☆☆</span>
+                <p>デザインカンプの作成</p>
               </div>
             </li>
             <li class="skill_item">
               <div class="skill_img"><i class="fa-brands fa-github fa-4x"></i></div>
               <div class="skill_text">
-                <p>
-                  GitHub<span>★★☆☆☆</span><br>
-                  基本的な操作が可能
-                </p>
+                <h3>GitHub</h3>
+                <span>★★☆☆☆</span>
+                <p>基本的な操作が可能</p>
               </div>
             </li>
           </ul>
