--- a/html/profile.html
+++ b/html/profile.html
@@ -15,9 +15,9 @@
     <script src="https://kit.fontawesome.com/59dfdf403e.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <header class="js-header">
       <div class="header_wrapper">
-        <a href="../index.html"><img src="/images/logo_2.png" alt="ロゴ画像"></a>
+        <a href="../index.html"><img class="header_img1" src="/images/logo_1.png" alt="ロゴ画像"><img class="header_img2" src="/images/logo_2.png" alt="ロゴ画像"></a>
         <nav id="g-nav">
           <ul>
             <li><a href="/index.html">HOME</a></li>
@@ -30,57 +30,65 @@
       </div>
     </header>
     <main>
+      <section class="top">
+        <div class="top_wrapper">
+          <div class="top_filter">
+            <div class="top_title">
+              <h1>Profile</h1>
+              <span>自己紹介</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="profile">
         <div class="wrapper">
-          <div class="section_title">
-            <h2>Profile</h2>
-            <span>自己紹介</span>
-          </div>
           <div class="profile_box">
             <div class="profile_text">
-              <div class="profile_text_content">
+              <div class="profile_text_content fadeUpTrigger">
                 <h3>Yu Hidaka</h3>
                 <p>宮崎県出身の27歳。<br>国立大学・大学院　理系学部を卒業後、メーカー勤務。<br>IT ✕ デザインにより、直接的にお客様の役に立てるwebデザイナーの<br>仕事に興味を持ち、独学にてwebデザインの勉強を開始。</p>
               </div>
-              <div class="profile_text_content">
+              <div class="profile_text_content fadeUpTrigger">
                 <h4>Web制作を始めたきっかけ</h4>
                 <p>目の前のお客様に価値を提供することで喜んでいただける仕事をしたいという思いから、web制作学習をはじめました。</p>
               </div>
-              <div class="profile_text_content">
+              <div class="profile_text_content fadeUpTrigger">
                 <h4>趣味</h4>
                 <p>ランニングを趣味としています。高校時代のお話ではありますが、<br>ダイエットを目的に帰宅後のランニングを習慣化したところ、<br>10kgの減量（75kg → 65kg）に成功しました。<br>結果が出るまでコツコツと取り組むのが私の持ち味です。</p>
               </div>
             </div>
-            <div class="profile_img"><img src="../images/profile_img.png" alt="プロフィール画像"></div>
+            <div class="profile_img fadeUpTrigger"><img src="../images/profile_img.png" alt="プロフィール画像"></div>
           </div>
         </div>
       </section>
       <section class="contact" id="contact">
-        <div class="wrapper">
-          <div class="section_title">
-            <h2>Contact</h2>
-            <span>お問い合わせ</span>
-            <p>各種依頼やご相談などございましたら、まずはお気軽にご連絡ください。<br><span>*</span>は入力必須項目です。</p>
+        <div class="contact_container">
+          <div class="wrapper">
+            <div class="section_title">
+              <h2>Contact</h2>
+              <span>お問い合わせ</span>
+              <p>各種依頼やご相談などございましたら、まずはお気軽にご連絡ください。<br><span>*</span>は入力必須項目です。</p>
+            </div>
+            <form action="#" class="contact_form zoomInTrigger" id="form">
+              <div class="contact_box">
+                <label for="name" class="contact_form_title">お名前<span>*</span></label>
+                <input type="text" class="contact_form_box" id="name" placeholder="山田太郎" required>
+              </div>
+              <div class="contact_box">
+                <label for="e-mail" class="contact_form_title">メールアドレス<span>*</span></label>
+                <input type="text" class="contact_form_box" id="e-mail" placeholder="xxxxx@domain.com" required>
+              </div>
+              <div class="contact_box">
+                <label for="tel" class="contact_form_title">電話番号</label>
+                <input type="text" class="contact_form_box" placeholder="080-xxxx-xxxx" id="tel">
+              </div>
+              <div class="contact_box">
+                <label for="message" class="contact_form_title">お問い合わせ内容<span>*</span></label>
+                <textarea name="messafe" id="message" cols="30" rows="10" class="contact_form_textarea" placeholder="ご相談内容をご記入ください" required></textarea>
+              </div>
+              <button type="submit" class="contact_btn">Send</button>
+            </form>
           </div>
-          <form action="#" class="contact_form" id="form">
-            <div class="contact_box">
-              <label for="name" class="contact_form_title">お名前<span>*</span></label>
-              <input type="text" class="contact_form_box" id="name" placeholder="山田太郎" required>
-            </div>
-            <div class="contact_box">
-              <label for="e-mail" class="contact_form_title">メールアドレス<span>*</span></label>
-              <input type="text" class="contact_form_box" id="e-mail" placeholder="xxxxx@domain.com" required>
-            </div>
-            <div class="contact_box">
-              <label for="tel" class="contact_form_title">電話番号</label>
-              <input type="text" class="contact_form_box" placeholder="080-xxxx-xxxx" id="tel">
-            </div>
-            <div class="contact_box">
-              <label for="message" class="contact_form_title">お問い合わせ内容<span>*</span></label>
-              <textarea name="messafe" id="message" cols="30" rows="10" class="contact_form_textarea" placeholder="ご相談内容をご記入ください" required></textarea>
-            </div>
-            <button type="submit" class="contact_btn">Send</button>
-          </form>
         </div>
       </section>
     </main>
