--- a/html/works.html
+++ b/html/works.html
@@ -15,9 +15,9 @@
     <script src="https://kit.fontawesome.com/59dfdf403e.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <header class="js-header">
       <div class="header_wrapper">
-        <a href="../index.html"><img src="/images/logo_2.png" alt="ロゴ画像"></a>
+        <a href="../index.html"><img class="header_img1" src="/images/logo_1.png" alt="ロゴ画像"><img class="header_img2" src="/images/logo_2.png" alt="ロゴ画像"></a>
         <nav id="g-nav">
           <ul>
             <li><a href="/index.html">HOME</a></li>
@@ -30,15 +30,22 @@
       </div>
     </header>
     <main>
+      <section class="top">
+        <div class="top_wrapper">
+          <div class="top_filter">
+            <div class="top_title">
+              <h1>Works</h1>
+              <span>制作実績</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="work">
         <div class="wrapper">
-          <div class="section_title">
-            <h2>Works</h2>
-            <span>制作実績</span>
-          </div>
           <ul class="work_list">
             <li class="work_item">
-              <div class="work_item_text">
+              <div class="work_item_img blurTrigger"><a href="#"><img src="/images/pf_1b.png" alt="ポートフォリオの画像です。"></a></div>
+              <div class="work_item_text fadeUpTrigger">
                 <div class="work_item_text_content">
                   <h3>架空建設会社　求人サイト（LP）</h3>
                   <p>クラウドワークス様記載の案件を元に下層案件を設定し、LP制作を行いました。青色をベースとすることで信頼感を表現し、見ていただいた方に安心感を持っていただけるようなデザインとしました。</p>
@@ -56,10 +63,10 @@
                   <p>約１週間</p>
                 </div>
               </div>
-              <div class="work_item_img"><img src="/images/pf_1b.png" alt="ポートフォリオの画像です。"></div>
             </li>
             <li class="work_item">
-              <div class="work_item_text">
+              <div class="work_item_img blurTrigger"><a href="#"><img src="/images/pf_2b.png" alt="ポートフォリオの画像です。"></a></div>
+              <div class="work_item_text fadeUpTrigger">
                 <div class="work_item_text_content">
                   <h3>架空ポートフォリオサイト（HP）</h3>
                   <p>プログラミングスクール様の教材にて、デザインカンプを元にコーディングした後、アレンジしたものを記載しております。</p>
@@ -77,37 +84,38 @@
                   <p>約１週間</p>
                 </div>
               </div>
-              <div class="work_item_img"><img src="/images/pf_2b.png" alt="ポートフォリオの画像です。"></div>
             </li>
           </ul>
         </div>
       </section>
       <section class="contact" id="contact">
-        <div class="wrapper">
-          <div class="section_title">
-            <h2>Contact</h2>
-            <span>お問い合わせ</span>
-            <p>各種依頼やご相談などございましたら、まずはお気軽にご連絡ください。<br><span>*</span>は入力必須項目です。</p>
+        <div class="contact_container">
+          <div class="wrapper">
+            <div class="section_title">
+              <h2>Contact</h2>
+              <span>お問い合わせ</span>
+              <p>各種依頼やご相談などございましたら、まずはお気軽にご連絡ください。<br><span>*</span>は入力必須項目です。</p>
+            </div>
+            <form action="#" class="contact_form zoomInTrigger" id="form">
+              <div class="contact_box">
+                <label for="name" class="contact_form_title">お名前<span>*</span></label>
+                <input type="text" class="contact_form_box" id="name" placeholder="山田太郎" required>
+              </div>
+              <div class="contact_box">
+                <label for="e-mail" class="contact_form_title">メールアドレス<span>*</span></label>
+                <input type="text" class="contact_form_box" id="e-mail" placeholder="xxxxx@domain.com" required>
+              </div>
+              <div class="contact_box">
+                <label for="tel" class="contact_form_title">電話番号</label>
+                <input type="text" class="contact_form_box" placeholder="080-xxxx-xxxx" id="tel">
+              </div>
+              <div class="contact_box">
+                <label for="message" class="contact_form_title">お問い合わせ内容<span>*</span></label>
+                <textarea name="messafe" id="message" cols="30" rows="10" class="contact_form_textarea" placeholder="ご相談内容をご記入ください" required></textarea>
+              </div>
+              <button type="submit" class="contact_btn">Send</button>
+            </form>
           </div>
-          <form action="#" class="contact_form" id="form">
-            <div class="contact_box">
-              <label for="name" class="contact_form_title">お名前<span>*</span></label>
-              <input type="text" class="contact_form_box" id="name" placeholder="山田太郎" required>
-            </div>
-            <div class="contact_box">
-              <label for="e-mail" class="contact_form_title">メールアドレス<span>*</span></label>
-              <input type="text" class="contact_form_box" id="e-mail" placeholder="xxxxx@domain.com" required>
-            </div>
-            <div class="contact_box">
-              <label for="tel" class="contact_form_title">電話番号</label>
-              <input type="text" class="contact_form_box" placeholder="080-xxxx-xxxx" id="tel">
-            </div>
-            <div class="contact_box">
-              <label for="message" class="contact_form_title">お問い合わせ内容<span>*</span></label>
-              <textarea name="messafe" id="message" cols="30" rows="10" class="contact_form_textarea" placeholder="ご相談内容をご記入ください" required></textarea>
-            </div>
-            <button type="submit" class="contact_btn">Send</button>
-          </form>
         </div>
       </section>
     </main>
